Added sum logic for entire game

--- a/index.html
+++ b/index.html
@@ -15,12 +15,18 @@
     <div id="fours"class="box">0</div>
     <div id="fives"class="box">0</div>
     <div id="sixes"class="box">0</div>
-    <div id="topScoreDisplay" class="box"></div>
+    <div id="topScoreDisplay" class="box">0</div>
     <hr>
     <input id="threeOfKind" type="number" placeholder="0" value="0">
     <input id="fourOfKind" type="number" placeholder="0" value="0">
     <div id="fullHouse" class="box">0</div>
     <div id="smStraight" class="box">0</div>
-    <div id="bottomScoreDisplay" class="box"></div>
+    <div id="lgStraight" class="box">0</div>
+    <div id="yahtzee" class="box">0</div>
+    <div id="yahtzeeBonus" class="box">0</div>
+    <input id="chance" type="number" placeholder="0" value="0">
+    <div id="bottomScoreDisplay" class="box">0</div>
+    <hr>
+    <div id="totalGameScore" class="box">0</div>
 </body>
 </html>
