Added dark mode styles

--- a/index.html
+++ b/index.html
@@ -9,75 +9,77 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="box-container">
-        <div class="box">Ones</div>
-        <div id="ones"class="box">0</div>
-    </div>
-    <div class="box-container">
-        <div class="box">Twos</div>
-        <div id="twos"class="box">0</div>
-    </div>
-    <div class="box-container">
-        <div class="box">Threes</div>
-        <div id="threes"class="box">0</div>
-    </div>
-    <div class="box-container">
-        <div class="box">Fours</div>
-        <div id="fours"class="box">0</div>
-    </div>
-    <div class="box-container">
-        <div class="box">Fives</div>
-        <div id="fives"class="box">0</div>
-    </div>
-    <div class="box-container">
-        <div class="box">Sixes</div>
-        <div id="sixes"class="box">0</div>
-    </div>
-    <div class="box-container">
-        <div class="box">Upper Score Total</div>
-        <div id="topScoreDisplay" class="box">0</div>
-    </div>
-    <hr>
-    <div class="box-container">
-        <div class="box">Three of a Kind</div>
-        <input id="threeOfKind" type="number" placeholder="0" value="0">
-    </div>
-    <div class="box-container">
-        <div class="box">Four of a Kind</div>
-        <input id="fourOfKind" type="number" placeholder="0" value="0">
-    </div>
-    <div class="box-container">
-        <div class="box">Full House</div>
-        <div id="fullHouse" class="box">0</div>
-    </div>
-    <div class="box-container">
-        <div class="box">Small Straight</div>
-        <div id="smStraight" class="box">0</div>
-    </div>
-    <div class="box-container">
-        <div class="box">Large Straight</div>
-        <div id="lgStraight" class="box">0</div>
-    </div>
-    <div class="box-container">
-        <div class="box">Yahtzee</div>
-        <div id="yahtzee" class="box">0</div>
-    </div>
-    <div class="box-container">
-        <div class="box">Yahtzee Bonus</div>
-        <div id="yahtzeeBonus" class="box">0</div>
-    </div>
-    <div class="box-container">
-        <div class="box">Chance</div>
-        <input id="chance" type="number" placeholder="0" value="0">
-    </div>
-    <div class="box-container">
-        <div class="box">Bottom Score Total</div>
-        <div id="bottomScoreDisplay" class="box">0</div>
-    </div>
-    <hr>
-    <div class="box-container">
-        <div class="box">Total Score</div>
-        <div id="totalGameScore" class="box">0</div>
+    <div class="content-container">
+        <div class="box-container">
+            <div class="box">Ones</div>
+            <div id="ones"class="box">0</div>
+        </div>
+        <div class="box-container">
+            <div class="box">Twos</div>
+            <div id="twos"class="box">0</div>
+        </div>
+        <div class="box-container">
+            <div class="box">Threes</div>
+            <div id="threes"class="box">0</div>
+        </div>
+        <div class="box-container">
+            <div class="box">Fours</div>
+            <div id="fours"class="box">0</div>
+        </div>
+        <div class="box-container">
+            <div class="box">Fives</div>
+            <div id="fives"class="box">0</div>
+        </div>
+        <div class="box-container">
+            <div class="box">Sixes</div>
+            <div id="sixes"class="box">0</div>
+        </div>
+        <div class="box-container">
+            <div class="box">Upper Score Total</div>
+            <div id="topScoreDisplay" class="box">0</div>
+        </div>
+        <hr>
+        <div class="box-container">
+            <div class="box">Three of a Kind</div>
+            <input id="threeOfKind" type="number" placeholder="0" value="0">
+        </div>
+        <div class="box-container">
+            <div class="box">Four of a Kind</div>
+            <input id="fourOfKind" type="number" placeholder="0" value="0">
+        </div>
+        <div class="box-container">
+            <div class="box">Full House</div>
+            <div id="fullHouse" class="box">0</div>
+        </div>
+        <div class="box-container">
+            <div class="box">Small Straight</div>
+            <div id="smStraight" class="box">0</div>
+        </div>
+        <div class="box-container">
+            <div class="box">Large Straight</div>
+            <div id="lgStraight" class="box">0</div>
+        </div>
+        <div class="box-container">
+            <div class="box">Yahtzee</div>
+            <div id="yahtzee" class="box">0</div>
+        </div>
+        <div class="box-container">
+            <div class="box">Yahtzee Bonus</div>
+            <div id="yahtzeeBonus" class="box">0</div>
+        </div>
+        <div class="box-container">
+            <div class="box">Chance</div>
+            <input id="chance" type="number" placeholder="0" value="0">
+        </div>
+        <div class="box-container">
+            <div class="box">Bottom Score Total</div>
+            <div id="bottomScoreDisplay" class="box">0</div>
+        </div>
+        <hr>
+        <div class="box-container">
+            <div class="box">Total Score</div>
+            <div id="totalGameScore" class="box">0</div>
+        </div>
     </div>
 </body>
 </html>
