--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     <div class="content-container">
+
+        <h1>YAHTZEE</h1>
         <div class="box-container">
             <div class="box">Ones</div>
             <div id="ones"class="box">0</div>
