Added plus minus indicator

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 <body>
     <div class="content-container">
-
-        <h1>YAHTZEE</h1>
+        <div class="header">
+            <h1>YAHTZEE</h1>
+            <div id="plusMinusDisplay">0</div>
+        </div>
         <div class="box-container">
             <div class="box">Ones</div>
             <div id="ones"class="box">0</div>
